# RoxySnake

./: CMakeLists.txt  main.cpp
RoxySnake/: logo.rc  save_file.json
SDL2/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
